Fix not showing overlay

--- a/src/pages/tokenLending/BorrowTokenPage/InstantBorrowContent/MarketOrderBook/MarketOrderBook.module.less
+++ b/src/pages/tokenLending/BorrowTokenPage/InstantBorrowContent/MarketOrderBook/MarketOrderBook.module.less
@@ -14,7 +14,7 @@
   position: relative;
   height: 100%;
 
-  &.showOverlay &::after {
+  &.showOverlay::after {
     content: '';
     display: block;
 
